tests/machine/x/c/left_join.error
line: 0
error: cc error: exit status 1
/workspace/mochi/tests/machine/x/c/left_join.c: In function ‘main’:
/workspace/mochi/tests/machine/x/c/left_join.c:74:7: warning: implicit declaration of function ‘result_item_list_t_create’ [-Wimplicit-function-declaration]
   74 |       result_item_list_t_create(orders.len * customers.len);
      |       ^~~~~~~~~~~~~~~~~~~~~~~~~
/workspace/mochi/tests/machine/x/c/left_join.c:74:7: error: invalid initializer
/workspace/mochi/tests/machine/x/c/left_join.c:104:9: warning: implicit declaration of function ‘memcmp’ [-Wimplicit-function-declaration]
  104 |     if (memcmp(&entry.customer, &(customer_t){0}, sizeof(customer_t)) == 0) {
      |         ^~~~~~
/workspace/mochi/tests/machine/x/c/left_join.c:4:1: note: include ‘<string.h>’ or provide a declaration of ‘memcmp’
    3 | #include <stdlib.h>
  +++ |+#include <string.h>
    4 | 

   1: // Generated by Mochi compiler v0.10.25 on 2025-07-14T03:19:50Z
