tests/machine/x/c/left_join.c
// Generated by Mochi compiler v0.10.25 on 2025-07-14T03:19:50Z
#include <stdio.h>
#include <stdlib.h>

typedef struct {
  int id;
  char *name;
} customer_t;
typedef struct {
  int len;
  customer_t *data;
} customer_list_t;
customer_list_t create_customer_list(int len) {
  customer_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(customer_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int id;
  int customerId;
  int total;
} order_t;
typedef struct {
  int len;
  order_t *data;
} order_list_t;
order_list_t create_order_list(int len) {
  order_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(order_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int orderId;
  customer_t customer;
  int total;
} result_item_t;
typedef struct {
  int len;
  result_item_t *data;
} result_item_list_t;
result_item_list_t create_result_item_list(int len) {
  result_item_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(result_item_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

int main() {
  customer_t tmp1_data[] = {(customer_t){.id = 1, .name = "Alice"},
                            (customer_t){.id = 2, .name = "Bob"}};
  customer_list_t tmp1 = {2, tmp1_data};
  customer_list_t customers = tmp1;
  order_t tmp2_data[] = {(order_t){.id = 100, .customerId = 1, .total = 250},
                         (order_t){.id = 101, .customerId = 3, .total = 80}};
  order_list_t tmp2 = {2, tmp2_data};
  order_list_t orders = tmp2;
  result_item_list_t tmp3 =
      result_item_list_t_create(orders.len * customers.len);
  int tmp4 = 0;
  for (int tmp5 = 0; tmp5 < orders.len; tmp5++) {
    order_t o = orders.data[tmp5];
    int tmp7 = 0;
    for (int tmp6 = 0; tmp6 < customers.len; tmp6++) {
      customer_t c = customers.data[tmp6];
      if (!(o.customerId == c.id)) {
        continue;
      }
      tmp7 = 1;
      tmp3.data[tmp4] =
          (result_item_t){.orderId = o.id, .customer = c, .total = o.total};
      tmp4++;
    }
    if (!tmp7) {
      customer_t c = (customer_t){0};
      tmp3.data[tmp4] =
          (result_item_t){.orderId = o.id, .customer = c, .total = o.total};
      tmp4++;
    }
  }
  tmp3.len = tmp4;
  result_item_list_t result = tmp3;
  printf("--- Left Join ---\n");
  for (int tmp8 = 0; tmp8 < result.len; tmp8++) {
    result_item_t entry = result.data[tmp8];
    printf("%s ", "Order");
    printf("%d ", entry.orderId);
    printf("%s ", "customer");
    if (memcmp(&entry.customer, &(customer_t){0}, sizeof(customer_t)) == 0) {
      printf("<nil>");
    } else {
      printf("map[");
      printf("id:");
      printf("%d", entry.customer.id);
      printf(" ");
      printf("name:");
      printf("%s", entry.customer.name);
      printf("]");
    }
    printf(" ");
    printf("%s ", "total");
    printf("%d\n", entry.total);
  }
  return 0;
}
